[package]
name = "solid-svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solid_svm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
